--- a/src/css/AddButton.css
+++ b/src/css/AddButton.css
@@ -4,7 +4,7 @@
     border-radius: 40px;
     width: 40px;
     border: 1px solid black;
-    background-color: #8EE3F5;
+    background-color: #70CAD1;
     color: white;
     font-size: large;
     font-weight: bold;
